fix menu layout issues

--- a/css/media_queries_mobile.css
+++ b/css/media_queries_mobile.css
@@ -5,7 +5,7 @@
   a .dish-img {
     width: 60px;
     height: 60px;
-    margin-right: 60px; }
+    /*margin-right: 60px*/; }
 
   .intro, .dishes, .catering, .about {
     padding-bottom: 20%; }
@@ -123,7 +123,7 @@
   a .dish-img {
     width: 100px;
     height: 80px;
-    margin-right: 100px;
+    /*margin-right: 100px;*/
     max-width: none; }
 
   header img {
